--- a/index.html
+++ b/index.html
@@ -3,25 +3,43 @@
 <head>
   <title>CV</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/style.css" media="screen">
 </head>
 <body>
 <section class="intro">
-  <article>
-    <h1><strong>Fatima KEHLI</strong></h1>
-    <p>6014 Résidence Les Bois du Temple</p>
-    <p>93390 Clichy sous Bois</p>
-    <a href="mail">fatima.kehili@hotmail.fr</a><br>
-    <a href="tel"> 0121355363</a>
-  </article>
+    <h1><strong>Fatima KEHLI</strong></h1><br>
+    <h1>Intégratrice web Junior</h1><br>
   <nav>
     <ul>
-      <li>Formations</li>
-      <li>Compétences</li>
-      <li>Expériences</li>
-      <li>Contact</li>
+      <li><a href="Accueil.html">Accueil</a></li>
+      <li><a href="Formation.html">Formations</a></li>
+      <li><a href="Compétences.html">Compétences</a></li>
+      <li><a href="Expériences Professionnelles.html">Expériences</a></li>
+      <li><a href="Contact.html">Contact</a></li>
     </ul>
   </nav>
+</section>
+<section>
+  <h1>Formation</h1>
+  <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
+  <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+  <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+  <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
+</section>
+<section>
+  <h1>Compétences</h1>
+  <h2>Langage Informatique</h2>
+  <p>HTML/CSS</p>
+  <p>JS</p>
+  <p>
+<section>
+<h1>Expériences Professionnelles </h1><br>
+<p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
+<p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
+<p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
+<p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
+<p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
+<p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
 </section>
 </body>
 </html>
