--- a/index.html
+++ b/index.html
@@ -4,42 +4,71 @@
   <title>CV</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="CSS/style.css" media="screen">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-<section class="intro">
+  <section class="intro">
     <h1><strong>Fatima KEHLI</strong></h1><br>
     <h1>Intégratrice web Junior</h1><br>
-  <nav>
-    <ul>
-      <li><a href="Accueil.html">Accueil</a></li>
-      <li><a href="Formation.html">Formations</a></li>
-      <li><a href="Compétences.html">Compétences</a></li>
-      <li><a href="Expériences Professionnelles.html">Expériences</a></li>
-      <li><a href="Contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</section>
-<section>
-  <h1>Formation</h1>
-  <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
-  <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-  <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-  <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
-</section>
-<section>
-  <h1>Compétences</h1>
-  <h2>Langage Informatique</h2>
-  <p>HTML/CSS</p>
-  <p>JS</p>
-  <p>
-<section>
-<h1>Expériences Professionnelles </h1><br>
-<p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
-<p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
-<p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
-<p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
-<p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
-<p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
-</section>
-</body>
-</html>
+    <nav>
+      <ul>
+        <li><a href="Accueil.html">Accueil</a></li>
+        <li><a href="#formation1">Formations</a></li>
+        <li><a href="#competence1">Compétences</a></li>
+        <li><a href="#experience1">Expériences</a></li>
+        <li><a href="#Contact1">Contact</a></li>
+      </ul>
+    </nav>
+  </section>
+  <section class="formation">
+    <h1 id="formation1">Formation</h1>
+    <section class="sous-formation">
+      <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
+      <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+      <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+      <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
+    </section>
+  </section>
+  <section class="compétences">
+    <h1 id="competence1">Compétences</h1>
+    <section class="sous-compétences">
+      <h2>Langage Informatique</h2>
+      <progress value="50%" max="200">50%</progress>
+      <section class="sous-langage">
+      <p>HTML/CSS</p>
+      <p>JS</p>
+      <h2>Logiciels</h2>
+    </section>
+      <section class="sous-logiciel"
+      <p>Linux</p>
+      <p>GitHub</p>
+      <p>Wordpress</p>
+    </section>
+    </section>
+    <section class="experience">
+      <h1 id="experience1">Expériences Professionnelles </h1><br>
+      <section class="sous-experience">
+      <p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
+      <p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
+      <p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
+      <p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
+      <p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
+      <p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
+    </section>
+    <section class="contact">
+      <h1 id="Contact1">Contact</h1>
+      <h2>Pour plus d'infos voici tous l'essentiel en une boîte</h2>
+      <section class="sous-contact">
+      <p>adresse | 6014 Résidence Les Bois du Temple</p>
+      <p>93390 Clichy-sous-Bois</p>
+      <p>06xxxxxxxx</p>
+      <p>fatima.kehili@hotmail.fr</p>
+      <p>Permis B</p>
+      <p>Véhiculée</p><i class="fa fa-car"></i>
+    </section>
+    </section>
+
+
+  </body>
+  </html>
