mise en place de boite + insertion photo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="CSS/style.css" media="screen">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet"> 
 </head>
 <body>
   <section class="intro">
+    <img src="image/file.jpeg" alt="ma-photo" />
     <h1><strong>Fatima KEHLI</strong></h1><br>
     <h1>Intégratrice web Junior</h1><br>
     <nav>
@@ -32,20 +33,41 @@
   </section>
   <section class="compétences">
     <h1 id="competence1">Compétences</h1>
-    <section class="sous-compétences">
+    <div class="sous-langage">
       <h2>Langage Informatique</h2>
       <progress value="50%" max="200">50%</progress>
-      <section class="sous-langage">
+        <article>
       <p>HTML/CSS</p>
-      <p>JS</p>
+      <p>Javascript</p>
+      <p>SQL</p>
+      <p>UML</p>
+    </article>
+  </div>
+      <div class="sous-logiciel">
+      <article>
       <h2>Logiciels</h2>
-    </section>
-      <section class="sous-logiciel"
       <p>Linux</p>
       <p>GitHub</p>
       <p>Wordpress</p>
-    </section>
-    </section>
+    </article>
+  </div>
+    <div class="sous-projets">
+      <article>
+      <h2>Projets</h2>
+      <p>Wordpress</p>
+      <p>One page</p>
+    </article>
+  </div>
+    <div class="sous-langues">
+      <article>
+      <h2>Langues</h2>
+      <p>Français</p>
+      <p>Arabe</p>
+      <p>Anglais</p>
+      <p>Espagnol</p>
+    </article>
+  </div>
+  </section>
     <section class="experience">
       <h1 id="experience1">Expériences Professionnelles </h1><br>
       <section class="sous-experience">
