CV presque finit

--- a/index.html
+++ b/index.html
@@ -31,73 +31,69 @@
     <p>Je vous laisse découvrir mon CV</p>
   </section>
 
+</section>
+<section class="formation">
+  <h1 id="formation1">Formations</h1>
+  <section class="sous-formation">
+    <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
+    <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+    <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+    <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
   </section>
-  <section class="formation">
-    <h1 id="formation1">Formation</h1>
-    <section class="sous-formation">
-      <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
-      <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-      <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-      <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
-    </section>
-  </section>
-  <section class="compétences">
-    <h1 id="competence1">Compétences</h1>
-    <div class="sous-langage">
-      <h3>Langage Informatique</h3>
-      <progress value="50%" max="200">50%</progress>
-      <article>
-        <p>HTML/CSS  <i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-        <p>Javascript  <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-        <p>SQL <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-        <p>UML <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-      </article>
-    </div>
-    <div class="sous-logiciel">
-      <article>
-        <h3>Logiciels</h3>
-        <p>Linux <input type="range" id="linux" name="linux1" step="1" value="2.5" min="1" max="5" /></p>
-        <p>GitHub</p>
-        <p>Wordpress</p>
-      </article>
-    </div>
-  </section>
-  <section>
-    <div class="sous-projets">
-      <article>
-        <h3>Projets</h3>
-        <p>Wordpress<a class="wordpress" href="#"><i class="icon fa fa-wordpress fa-1x" ></i></a></p>
-        <p>One page</p>
-        <p>CV</p>
-      </article>
-    </div>
-    <div class="sous-langues">
-      <article>
-        <h3>Langues</h3>
-        <p>Français <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
-        <p>Arabe  <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
-        <p>Anglais <i class="fa fa-check fa-1x"></i></p>
-        <p>Espagnol <i class="fa fa-check fa-1x"></i></p>
-      </article>
-    </div>
-  </section>
+</section>
+<section class="compétences">
+  <h1 id="competence1">Compétences</h1>
+  <div class="sous-langage">
+    <h3>Langage Informatique</h3>
+    <article>
+      <p>HTML/CSS  <i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+      <p>Javascript  <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+      <p>SQL <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+      <p>UML <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+    </article>
+  </div>
+  <div class="sous-logiciel">
+    <article>
+      <h3>Logiciels</h3>
+      <p>Linux <progress class="sous-progress1" value="3" max="9">20%</progress></p>
+      <p>GitHub <progress value="4" max="9">50%</progress></p>
+      <p>Wordpress <progress value="4" max="9">50%</progress></p>
+    </article>
+  </div>
+</section>
 <section>
-
+  <div class="sous-projets">
+    <article>
+      <h3>Projets</h3>
+      <p>Wordpress<a class="wordpress" href="#"> <i class="icon fa fa-wordpress fa-1x" ></i></a></p>
+      <p>One page</p>
+      <p>CV <a class="icon-link" href="len github"><i class="icon fa fa-github-square fa-1x" aria-hidden="true"></i></a></p>
+    </article>
+  </div>
+  <div class="sous-langues">
+    <article>
+      <h3>Langues</h3>
+      <p>Français <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
+      <p>Arabe  <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
+      <p>Anglais <i class="fa fa-check fa-1x"></i></p>
+      <p>Espagnol <i class="fa fa-check fa-1x"></i></p>
+    </article>
+  </div>
 </section>
 <section class="experience" >
-  <h1>Expériences Professionnelles </h1><br>
-    <section  id="experience1"  class="sous-experience">
+  <h1 >Expériences Professionnelles </h1><br>
+  <section  id="experience1"  class="sous-experience">
     <p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
     <p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
     <p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
     <p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
     <p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
     <p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
-    </section>
+  </section>
 </section>
 <section class="contact">
   <h1 id="Contact1">Contact</h1>
-  <h2>Pour plus d'infos voici tous l'essentiel en une boîte</h2>
+  <h3>Pour plus d'infos voici tous l'essentiel en une boîte</h>
   <section class="sous-contact">
     <p>6014 Résidence Les Bois du Temple</p>
     <p>93390 Clichy-sous-Bois</p>
@@ -105,7 +101,10 @@
     <p><a href="mailto:fatima.kehili@hotmail.fr"><strong>fatima.kehili@hotmail.fr</strong></a></p>
     <p>Permis B</p>
     <p>Véhiculée</p><i class="fa fa-car"></i>
+    <a class="cv" href=""><i class="icon fa fa-file-text-o fa-2x" aria-hidden="true"></i></a>
+    <a class="eportfolio" href="http://fatimakehiliinfo.wixsite.com/fatimaeportfolio"><i class="icon fa	fa fa-hand-o-up fa-2x" aria-hidden="true"></i></a>
   </section>
+</section>
 </section>
 <footer>
   <a class="retour-haut" href="#"><i class="icon fa fa-arrow-up fa-2x" aria-hidden="true"></i></a>
