--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <section class="intro">
-    <img src="image/file.jpeg" alt="ma-photo" />
+    <!-- <img src="image/file.jpeg" alt="ma-photo" /> -->
     <h1><strong>Fatima KEHLI</strong></h1><br>
     <h1>Intégratrice web Junior <a href="#accueil1"> <i class="fa fa-angle-right fa-1.5x" aria-hidden="true" margin:"2px"></i></a></h1>
     <nav>
@@ -27,88 +27,91 @@
     <h1>Qui suis-je?</h1>
     <p>Simplonienne junior depuis peu, je suis en pleine formation chez Simplon</p>
     <p>Simplon est une fabrique qui permet à des jeunes de 16 à 25 ans de faire du numérique un levier d'insertion sociale et professionnelle </p>
-    <p>De ce fait, je suis en pleine recherche d'une entreprise ou start-up qui puisse me permettre de d'effectuer un stage d'observation d'une durée de 5 jours</p>
+    <p>De ce fait, je suis en pleine recherche d'une entreprise ou start-up qui puisse me permettre d'effectuer un stage d'observation d'une durée de 5 jours</p>
     <p>Je vous laisse découvrir mon CV</p>
   </section>
-
-</section>
-<section class="formation">
-  <h1 id="formation1">Formations</h1>
-  <section class="sous-formation">
-    <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
-    <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-    <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
-    <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
+  <section class="formation">
+    <h1 id="formation1">Formations</h1>
+    <section class="sous-formation">
+      <p>2017 | Formation intensive au sein de Simplon de 3 mois </p>
+      <p>2014-2015 | Deuxième année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+      <p>2013-2014 | Première année de DUT Informatique à l'Université Paris 13 Villetaneuse</p>
+      <p>2012-2013 | Baccalauréat Scientifique au Lycée Alfre Nobel</p>
+    </section>
   </section>
-</section>
-<section class="compétences">
-  <h1 id="competence1">Compétences</h1>
-  <div class="sous-langage">
-    <h3>Langage Informatique</h3>
-    <article>
-      <p>HTML/CSS  <i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-      <p>Javascript  <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-      <p>SQL <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-      <p>UML <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
-    </article>
-  </div>
-  <div class="sous-logiciel">
-    <article>
-      <h3>Logiciels</h3>
-      <p>Linux <progress class="sous-progress1" value="3" max="9">20%</progress></p>
-      <p>GitHub <progress value="4" max="9">50%</progress></p>
-      <p>Wordpress <progress value="4" max="9">50%</progress></p>
-    </article>
-  </div>
-</section>
-<section>
-  <div class="sous-projets">
-    <article>
-      <h3>Projets</h3>
-      <p>Wordpress<a class="wordpress" href="#"> <i class="icon fa fa-wordpress fa-1x" ></i></a></p>
-      <p>One page</p>
-      <p>CV <a class="icon-link" href="len github"><i class="icon fa fa-github-square fa-1x" aria-hidden="true"></i></a></p>
-    </article>
-  </div>
-  <div class="sous-langues">
-    <article>
-      <h3>Langues</h3>
-      <p>Français <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
-      <p>Arabe  <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
-      <p>Anglais <i class="fa fa-check fa-1x"></i></p>
-      <p>Espagnol <i class="fa fa-check fa-1x"></i></p>
-    </article>
-  </div>
-</section>
-<section class="experience" >
-  <h1 >Expériences Professionnelles </h1><br>
-  <section  id="experience1"  class="sous-experience">
-    <p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
-    <p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
-    <p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
-    <p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
-    <p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
-    <p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
+  <section class="compétences">
+    <h1 id="competence1">Compétences</h1>
+    <div class="sous-langage">
+      <h3>Langages Informatique</h3>
+      <article>
+        <p>HTML 5<i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+        <p>CSS 3 <i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+        <p>Javascript <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p>
+        <!-- <p>UML <i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i><i class="fa fa-star-o fa-1x"></i></p> -->
+      </article>
+    </div>
+    <div class="sous-logiciel">
+      <article>
+        <h3>Logiciels/Bibliothèques</h3>
+        <p>Linux <!--<progress class="sous-progress1" value="3" max="9">20%</progress>--></p>
+        <p>GitHub <!--<progress value="4" max="9">50%</progress>--></p>
+        <p>Wordpress <!--<progress value="4" max="9">50%</progress>--></p>
+        <p>Bootstrap 4 </p>
+        <p>Jquery</p>
+      </article>
+    </div>
   </section>
-</section>
-<section class="contact">
-  <h1 id="Contact1">Contact</h1>
-  <h3>Pour plus d'infos voici tous l'essentiel en une boîte</h>
-  <section class="sous-contact">
-    <p>6014 Résidence Les Bois du Temple</p>
-    <p>93390 Clichy-sous-Bois</p>
-    <p>06 63 30 29 32</p>
-    <p><a href="mailto:fatima.kehili@hotmail.fr"><strong>fatima.kehili@hotmail.fr</strong></a></p>
-    <p>Permis B</p>
-    <p>Véhiculée</p><i class="fa fa-car"></i>
-    <a class="cv" href=""><i class="icon fa fa-file-text-o fa-2x" aria-hidden="true"></i></a>
-    <a class="eportfolio" href="http://fatimakehiliinfo.wixsite.com/fatimaeportfolio"><i class="icon fa	fa fa-hand-o-up fa-2x" aria-hidden="true"></i></a>
+  <section>
+    <div class="sous-projets">
+      <article>
+        <h3>Projets</h3>
+        <p><i class="fa fa-chevron-right" aria-hidden="true"></i>Github<a href="https://github.com/kehlif"></a></p>
+        <p><i class="fa fa-chevron-right" aria-hidden="true"></i>Codepen <a href="https://codepen.io/kehlif/pens/forked/?sort_col=item_updated_at#"></a></p>
+        <p><i class="fa fa-chevron-right" aria-hidden="true"></i>CodeCademy <a href="https://www.codecademy.com/kehli"></a></p>
+        <!-- <p>Wordpress<a class="wordpress" href="#"> <i class="icon fa fa-wordpress fa-1x" ></i></a></p>
+        <p>One page</p>
+        <p>CV <a class="icon-link" href="len github"><i class="icon fa fa-github-square fa-1x" aria-hidden="true"></i></a></p> -->
+      </article>
+    </div>
+    <div class="sous-langues">
+      <article>
+        <h3>Langues</h3>
+        <p>Français <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
+        <p>Arabe  <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i> <i class="fa fa-check fa-1x"></i></p>
+        <p>Anglais <i class="fa fa-check fa-1x"></i></p>
+        <p>Espagnol <i class="fa fa-check fa-1x"></i></p>
+      </article>
+    </div>
   </section>
-</section>
-</section>
-<footer>
-  <a class="retour-haut" href="#"><i class="icon fa fa-arrow-up fa-2x" aria-hidden="true"></i></a>
-</footer>
+  <section class="experience" >
+    <h1 >Expériences Professionnelles </h1><br>
+    <section  id="experience1"  class="sous-experience">
+      <p>2017 | Opératrice de Presse - Viapost - Chelles (CDD 4 mois)</p>
+      <p>2016 | Vendeuse en Boulangerie - Boulangerie L'Étoile d'Or - Montfermeil (CDD 4 mois)</p>
+      <p>2015 | Développeur Informatique - EDF CIT - La Défense (Stage 10 semaines)</p>
+      <p>2014-2015 | Tutrice - Aide aux devoirs - Association Parcours - Montfermeil (CDD 10 mois)</p>
+      <p>2012-2013 | Assistante scolaire auprès de particuliers - Association Parcours - Montfermeil (CDD 10 mois)</p>
+      <p>2011 | Garde d'enfants auprès de particuliers - Clichy-sous-Bois (CDD 2mois)</p>
+    </section>
+  </section>
+  <section class="contact">
+    <h1 id="Contact1">Contact</h1>
+    <h3>Pour plus d'infos voici tous l'essentiel en une boîte</h>
+      <section class="sous-contact">
+        <p>6014 Résidence Les Bois du Temple</p>
+        <p>93390 Clichy-sous-Bois</p>
+        <p>06 63 30 29 32</p>
+        <p><a href="mailto:fatima.kehili@hotmail.fr"><strong>fatima.kehili@hotmail.fr</strong></a></p>
+        <p>Permis B</p>
+        <p>Véhiculée</p><i class="fa fa-car"></i>
+        <a class="cv" href=""><i class="icon fa fa-file-text-o fa-2x" aria-hidden="true"></i></a>
+        <a class="eportfolio" href="http://fatimakehiliinfo.wixsite.com/fatimaeportfolio"><i class="icon fa	fa fa-hand-o-up fa-2x" aria-hidden="true"></i></a>
+      </section>
+    </section>
+  </section>
+  <footer>
+    <a class="retour-haut" href="#"><i class="icon fa fa-arrow-up fa-2x" aria-hidden="true"></i></a>
+  </footer>
 
 </body>
 </html>
